Creato con Colaboratory

--- a/Template.ipynb
+++ b/Template.ipynb
@@ -6,7 +6,7 @@
       "name": "Intro.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNJi1iQyOC9jJl1hxmzkx91",
+      "authorship_tag": "ABX9TyM/kNOthDb/SdQ2yO4PB653",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,18 +35,50 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b35f51c9-0c3b-4691-8cbb-a393c14fbb2a"
+        "outputId": "7d447606-780f-4ec7-a61d-8ba819c85b81"
       },
       "source": [
         "print(\"Welcome in project Rus Keldius\")"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Welcome in project Rus Keldius\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3uE8MMxejf65"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "80fihx94jggN",
+        "outputId": "aeb4bd5a-a167-4411-d397-2ab7f8266950",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(\"by Pancrazio Carbotti :-D\")"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "by Pancrazio Carbotti :-D\n"
           ]
         }
       ]
